# iiwa-phys

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml
catkin_ws/src/iiwa_description/: CMakeLists.txt  package.xml
catkin_ws/src/iiwa_description/launch/: display_iiwa.launch
catkin_ws/src/iiwa_description/rviz/: display_iiwa.rviz
catkin_ws/src/iiwa_description/urdf/: iiwa.gazebo.xacro  iiwa14.xacro  iiwa14_rq140.xacro  robotiq_arg2f.xacro  robotiq_arg2f_140_model.xacro  robotiq_arg2f_140_model_macro.xacro  robotiq_arg2f_transmission.xacro
catkin_ws/src/iiwa_example_motion/: CMakeLists.txt  package.xml
catkin_ws/src/iiwa_example_motion/launch/: iiwa_example.launch
catkin_ws/src/iiwa_example_motion/src/: iiwa_example.py
catkin_ws/src/iiwa_moveit_config/: CMakeLists.txt  package.xml
catkin_ws/src/iiwa_moveit_config/config/: cartesian_limits.yaml  fake_controllers.yaml  gazebo_controllers.yaml  iiwa.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  stomp_planning.yaml
catkin_ws/src/iiwa_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  iiwa_moveit_controller_manager.launch.xml  joystick_control.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  pilz_industrial_motion_planner_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_control_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch  warehouse_settings.launch.xml
colcon_ws/src/iiwa_description/: CMakeLists.txt  package.xml
colcon_ws/src/iiwa_description/gazebo/: iiwa_gripper_gazebo.xacro
colcon_ws/src/iiwa_description/launch/: display_iiwa.launch.py
colcon_ws/src/iiwa_description/ros2_control/: iiwa_gripper_controllers.yaml  iiwa_gripper_system_config.yaml  iiwa_gripper_system_interface.xacro
colcon_ws/src/iiwa_description/rviz/: display_iiwa.rviz
colcon_ws/src/iiwa_description/urdf/: iiwa14_description.xacro  iiwa14_rq140.xacro  robotiq_arg2f.xacro  robotiq_arg2f_140_model_macro.xacro
dataset/meshes/hande/: coupler.stl  finger_1.stl  finger_2.stl  hande.stl
dataset/urdfs/: block.urdf  iiwa14_rq140.urdf  iiwa14_rqhe.urdf  iiwa14_rqhe_sdf.urdf
dataset/xmls/: cube.xml
dataset/xmls/common_arena/: simple_plane.xml
dataset/xmls/iiwa/: iiwa.xml
dataset/xmls/iiwa/assets/: assets.xml  hande.xml  iiwa14.xml  iiwa_arm_motor_actuator.xml  iiwa_assets.xml  iiwa_body.xml  iiwa_gripper.xml  robotiq_gripper_position_actuator.xml
dockerfile/humble/: Dockerfile
dockerfile/humble/colcon_ws/src/moveit_configs_utils/: launches.py
dockerfile/humble/yaml/: repos-fri-1.15.yaml
dockerfile/noetic/: Dockerfile
scripts/: genesis_grasp.py  genesis_hello.py  genesis_motion.py  genesys_hello.py  isaacgym_pick.py  isaacgym_rrt.py  isaacgym_vis.py  mujoco_vis.py  pybullet_rrt.py  pybullet_vis.py
