<package format="2">
    <name>iiwa_example_motion</name>
    <version>0.0.0</version>
    <description>
        Launch and source files for example motions using iiwa with the MoveIt!
    </description>
    <author email="taku8926@gmail.com">Takuya Kiyokawa</author>
    <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>
    <license>3-Clause BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_srvs</depend>
    <depend>moveit_core</depend>
    <depend>moveit_visual_tools</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>moveit_commander</depend>
</package>
